--- a/FE_9_2_homework_css-basics/homework/css/style.css
+++ b/FE_9_2_homework_css-basics/homework/css/style.css
@@ -61,7 +61,7 @@
 	/*4) Add box shadow to sidebar ...*/
 	.tm-sidebar,
 	.tm-content-box {
-		box-shadow: 0 0 7px rgba(1, 0.2, 0, 0.9);
+		box-shadow:  0 0 10px rgba(0,0,0,0.5);
 
 	}
 	/*
