--- a/FL_9_6_homework_ajax/homework/src/style.css
+++ b/FL_9_6_homework_ajax/homework/src/style.css
@@ -4,6 +4,11 @@
 
 body {
    text-align: center;
+  
+}
+h1{
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(0, 110, 255);
 }
 
 .invisible{
